--- a/server/package.json
+++ b/server/package.json
@@ -11,15 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-validator": "^6.10.0",
-    "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.2.5",
-    "nodemailer": "^6.5.0"
+    "mysql2": "^2.2.5"
   }
 }
