--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,10 @@
     "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.10.0",
+    "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.2.5"
+    "mysql2": "^2.2.5",
+    "nodemailer": "^6.5.0"
   }
 }
