--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "opencage-api-client": "^1.0.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-autosuggest": "^10.1.0",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
