--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "react": "^17.0.1",
     "react-autosuggest": "^10.1.0",
     "react-bootstrap": "^1.5.2",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
